测试页面更新

--- a/posts/pincoox.mdx
+++ b/posts/pincoox.mdx
@@ -1,5 +1,5 @@
 ---
-title: 中国传媒大学虚拟人
+title: 皮诺曹虚拟人定制平台
 description: "Consider that for a moment: everything we see around us is assumed to have had a cause and is contingent upon."
 date: Jan 2 2021
 ---
