--- a/posts/test-post.mdx
+++ b/posts/test-post.mdx
@@ -1,5 +1,5 @@
 ---
-title: 中国传媒大学虚拟人
+title: cuc
 description: "Consider that for a moment: everything we see around us is assumed to have had a cause and is contingent upon."
 date: Jan 2 2021
 ---
